# memory-forge-rs

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  session_service.rs  settings.rs
src/app/routes/: about.tsx  dashboard.tsx  settings.tsx
src/components/: logo.tsx
src/components/layout/: shell-layout.tsx
src/components/ui/: confirm-dialog.tsx
src/features/desktop/: api.ts  i18n.ts  types.ts
src/features/session/: session-detail.tsx  session-list.tsx
