[package]
name = "memory-forge"
version = "3.3.3"
description = "Memory Forge — Local AI Session Manager"
authors = ["VoidCraft"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
